removed handler attribute in elements (incomplete)